--- a/_includes/site-search.html
+++ b/_includes/site-search.html
@@ -1,6 +1,7 @@
 <div class="form  form--search">
   <form id="contact-form" action="">
-    <input class="input" class="question" id="search" type="search" name="search" placeholder="e.g. Hey What?!" autocomplete="off" />
+    <input class="input" class="question" id="search" type="search" name="search" 
+      placeholder="Enter search terms" autocomplete="off" />
     <label for="search"></label>
 
     <ul class="list  list--results" id="list">
