--- a/css/search.css
+++ b/css/search.css
@@ -10,6 +10,8 @@ Basic input element using psuedo classes
   
   input.question,
   textarea.question {
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 300;;
     font-size: 48px;
     font-weight: 300;
     border-radius: 2px;
@@ -29,7 +31,7 @@ Basic input element using psuedo classes
     white-space: nowrap;
     padding: 0;
     margin: 0;
-    width: 60%;
+    width: 55%;
     border-top: 1px solid red;
     -webkit-transition: width 0.4s ease;
     transition: width 0.4s ease;
