--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,6 +3,7 @@ common-css:
   - "/css/bootstrap.min.css"
   - "/css/bootstrap-social.css"
   - "/css/main.css"
+  - "/css/lightbox.css"
 common-ext-css:
   - "//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
 common-googlefonts:
@@ -12,6 +13,7 @@ common-js:
   - "/js/jquery-1.11.2.min.js"
   - "/js/bootstrap.min.js"
   - "/js/main.js"
+  - "/js/lightbox.js"
 ---
 
 <!DOCTYPE html>
