--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a:focus {
 }
 blockquote {
   color: #808080;
-  font-style: italic;
+  /* font-style: italic; */
 }
 blockquote p:first-child {
   margin-top: 0;
