--- a/css/search.css
+++ b/css/search.css
@@ -10,7 +10,7 @@ Basic input element using psuedo classes
   
   input.question,
   textarea.question {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Assistant', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 300;;
     font-size: 48px;
     font-weight: 300;
